<resources>
    <string name="app_name">AutoHub</string>
    <string name="sign_in_ru">Вход</string>
    <string name="phone_number_ru">Номер телефона</string>
    <string name="password_ru">Пароль</string>
    <string name="or_ru">или</string>
    <string name="sign_up_ru">Регистрация</string>
    <string name="user_name_ru">Имя пользователя</string>
    <string name="confirm_password_ru">Подтвердите пароль</string>
    <string name="brand_ru">Марка</string>
    <string name="year_of_issue_ru">Год выпуска</string>
    <string name="mileage_ru">Пробег</string>
    <string name="characteristics_ru">Характеристики</string>
    <string name="body_ru">Кузов</string>
    <string name="color_ru">Цвет</string>
    <string name="engine_ru">Двигатель</string>
    <string name="transmission_ru">КПП</string>
    <string name="drive_unit_ru">Привод</string>
    <string name="buy_now_ru">Купить сейчас</string>
    <string name="call_ru">Позвонить</string>
    <string name="sign_up_for_test_drive_ru">Записаться на тест-драйв</string>
    <string name="brands_ru">Марки</string>
    <string name="favourite_ru">Избранное</string>
    <string name="filters_ru">Фильтры</string>
    <string name="price_ru">Цена</string>
    <string name="engine_capacity_ru">Объем двигателя</string>
    <string name="engine_power_ru">Мощность двигателя</string>
    <string name="profile_ru">Профиль</string>
    <string name="about_ru">О себе</string>
    <string name="notifications_ru">Уведомления</string>
    <string name="darkTheme_ru">Темная тема</string>
    <string name="clearSearchHistory_ru">Очистить историю поиска</string>
    <string name="aboutApp_ru">О приложении</string>
    <string name="home_ru">Главная</string>
    <string name="cancel_ru">Отменить</string>
    <string name="search_ads_ru">Поиск по объявлениям</string>
    <string name="default_text">asd</string>
    <string name="search_ru">Найти</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_results_ru">Результаты поиска</string>
    <string name="no_connection_ru">Отсуствует соединение с интернетом</string>
    <string name="try_again_ru">Повторить</string>
    <string name="no_data_ru">Ничего не найдено</string>
    <string name="search_history_ru">История поиска</string>

    <string-array name="makes">
        <item>Abarth</item>
        <item>Acura</item>
        <item>Alfa Romeo</item>
        <item>Alpine</item>
        <item>AMC</item>
        <item>Ariel</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Austin</item>
        <item>Austin-Healey</item>
        <item>AvtoVAZ</item>
        <item>BAIC</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Borgward</item>
        <item>Brilliance</item>
        <item>Bristol</item>
        <item>Bugatti</item>
        <item>Buick</item>
        <item>BYD</item>
        <item>Cadillac</item>
        <item>Callaway</item>
        <item>Caparo</item>
        <item>Caterham</item>
        <item>Changan</item>
        <item>Chery</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Cizeta</item>
        <item>Conquest</item>
        <item>Dacia</item>
        <item>Daewoo</item>
        <item>Daihatsu</item>
        <item>Daimler</item>
        <item>Datsun</item>
        <item>De Tomaso</item>
        <item>Delage</item>
        <item>DeLorean</item>
        <item>DeltaWing</item>
        <item>Denzel</item>
        <item>DeSoto</item>
        <item>Detroit Electric</item>
        <item>Dodge</item>
        <item>Donkervoort</item>
        <item>DS</item>
        <item>Eagle</item>
        <item>EDAG</item>
        <item>Elfin</item>
        <item>Faraday Future</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Fisker</item>
        <item>Ford</item>
        <item>Foton</item>
        <item>GAC</item>
        <item>GAZ</item>
        <item>Geely</item>
        <item>Genesis</item>
        <item>Ginetta</item>
        <item>GMC</item>
        <item>Gumpert</item>
        <item>Hennessey</item>
        <item>Hillman</item>
        <item>Holden</item>
        <item>Honda</item>
        <item>Hongqi</item>
        <item>HSV</item>
        <item>Hudson</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Innocenti</item>
        <item>Isdera</item>
        <item>Isuzu</item>
        <item>Iveco</item>
        <item>JAC</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Jensen</item>
        <item>Jetcar</item>
        <item>Jiangling</item>
        <item>Joss</item>
        <item>Kamaz</item>
        <item>Karma</item>
        <item>KIA</item>
        <item>Koenigsegg</item>
        <item>Lada</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Landwind</item>
        <item>Lexus</item>
        <item>Leyland</item>
        <item>Lincoln</item>
        <item>Lobini</item>
        <item>Lotus</item>
        <item>Lynk &amp; Co</item>
        <item>Mahindra</item>
        <item>Marcos</item>
        <item>Marlin</item>
        <item>Maserati</item>
        <item>Mastretta</item>
        <item>Maybach</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes-Benz</item>
        <item>Mercury</item>
        <item>MG</item>
        <item>Microcar</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Mitsuoka</item>
        <item>Morgan</item>
        <item>Morris</item>
        <item>Moskvitch</item>
        <item>Nio</item>
        <item>Nissan</item>
        <item>Noble</item>
        <item>NSU</item>
        <item>Oldsmobile</item>
        <item>Opel</item>
        <item>Osca</item>
        <item>Packard</item>
        <item>Pagani</item>
        <item>Panther</item>
        <item>Perodua</item>
        <item>Peugeot</item>
        <item>Pininfarina</item>
        <item>Plymouth</item>
        <item>Polestar</item>
        <item>Pontiac</item>
        <item>Porsche</item>
        <item>Proton</item>
        <item>Puch</item>
        <item>Qoros</item>
        <item>Qvale</item>
        <item>Radical</item>
        <item>Ram</item>
        <item>Ranz</item>
        <item>Renault</item>
        <item>Rezvani</item>
        <item>Rimac</item>
        <item>Riley</item>
        <item>Rolls-Royce</item>
        <item>Ronart</item>
        <item>Rover</item>
        <item>Ruf</item>
        <item>Saab</item>
        <item>Saleen</item>
        <item>Sbarro</item>
        <item>Scania</item>
        <item>Scion</item>
        <item>SEAT</item>
        <item>Shelby</item>
        <item>Shuanghuan</item>
        <item>Singer</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>SsangYong</item>
        <item>SSC</item>
        <item>Steyr</item>
        <item>Studebaker</item>
        <item>Subaru</item>
        <item>Sunbeam</item>
        <item>Suzuki</item>
        <item>Talbot</item>
        <item>Tata</item>
        <item>Tatra</item>
        <item>Tesla</item>
        <item>Think</item>
        <item>Toyota</item>
        <item>Trabant</item>
        <item>Triumph</item>
        <item>TVR</item>
        <item>Ultima</item>
        <item>Vandenbrink</item>
        <item>Vauxhall</item>
        <item>Vector</item>
        <item>Venturi</item>
        <item>Vespa</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
        <item>Wartburg</item>
        <item>Westfield</item>
        <item>Wiesmann</item>
        <item>Willys</item>
        <item>Wuling</item>
        <item>Xpeng</item>
        <item>Yugo</item>
        <item>Zastava</item>
        <item>ZAZ</item>
        <item>Zenos</item>
        <item>Zenvo</item>
        <item>ZIL</item>
        <item>Zimmer</item>
        <item>Zotye</item>
        <item>Zundapp</item>
        <item>ZX</item>
        <item>АЗЛК</item>
    </string-array>

</resources>