<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/keyboard_backspace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_mono_bold"
        android:padding="16dp"
        android:text="@string/filters_ru"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/brand_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30sp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filters">

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/roboto_mono_bold"
            android:text="@string/brand_ru"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filters_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brand_container">


        <EditText
            android:id="@+id/year_of_issue_ru_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/year_of_issue_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mileage_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/mileage_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_of_issue_ru_et" />

        <EditText
            android:id="@+id/price_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/price_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mileage_et" />

        <EditText
            android:id="@+id/transmission_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/transmission_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_et" />

        <EditText
            android:id="@+id/engine_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/engine_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transmission_et" />

        <EditText
            android:id="@+id/engine_capacity_ru"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/engine_capacity_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/engine_et" />

        <EditText
            android:id="@+id/engine_power_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/engine_power_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/engine_capacity_ru" />


        <EditText
            android:id="@+id/drive_unit_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/drive_unit_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/engine_power_et" />

        <EditText
            android:id="@+id/color_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:hint="@string/color_ru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/darkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drive_unit_et" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>